--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="navbar-start">
                     <a class="navbar-item">
                         <span>
-                            <i class="fa-brands fa-readme" href=""></i>
+                            <i class="fa-brands fa-readme" href="https://github.com/DanielDz21/CaixaEletronico/tree/master#readme"></i>
                             Readme do Projeto
                         </span>
                     </a>
