--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           
             <div class="navbar-menu">
                 <div class="navbar-start">
-                    <a class="navbar-item" href="https://github.com/DanielDz21/CaixaEletronico/tree/master#readme"></a>>
+                    <a class="navbar-item" href="https://github.com/DanielDz21/CaixaEletronico/tree/master#readme" target="_blank"></a>>
                         <span>
                             <i class="fa-brands fa-readme"</i>
                             Readme do Projeto
@@ -27,12 +27,12 @@
                     </a>
                 </div>
                 <div class="navbar-end">
-                    <a class="navbar-item" href="https://www.linkedin.com/in/daniel-da-silva-dev/" target="_BLANK">
+                    <a class="navbar-item" href="https://www.linkedin.com/in/daniel-da-silva-dev/" target="_blank">
                         <span class="icon is-medium has-text-info">
                             <i class="fa-brands fa-linkedin fa-2xl"></i>
                         </span>
                     </a>
-                    <a class="navbar-item" href="https://github.com/DanielDz21" target="_BLANK">
+                    <a class="navbar-item" href="https://github.com/DanielDz21" target="_blank">
                         <span class="icon is-medium">
                             <i class="fa-brands fa-github-square fa-2xl"></i>
                         </span>
