--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
           
             <div class="navbar-menu">
                 <div class="navbar-start">
-                    <a class="navbar-item" href="https://github.com/DanielDz21/CaixaEletronico/tree/master#readme" target="_blank"></a>>
+                    <a class="navbar-item" href="https://github.com/DanielDz21/CaixaEletronico/tree/master#readme" target="_blank">
                         <span>
-                            <i class="fa-brands fa-readme"</i>
+                            <i class="fa-brands fa-readme"></i>
                             Readme do Projeto
                         </span>
                     </a>
