--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <img src="img/asseinfo.png" width="112" height="28">
                 </a>
             </div>
-          
+
             <div class="navbar-menu">
                 <div class="navbar-start">
                     <a class="navbar-item" href="https://github.com/DanielDz21/CaixaEletronico/tree/master#readme" target="_blank">
@@ -35,6 +35,11 @@
                     <a class="navbar-item" href="https://github.com/DanielDz21" target="_blank">
                         <span class="icon is-medium">
                             <i class="fa-brands fa-github-square fa-2xl"></i>
+                        </span>
+                    </a>
+                    <a class="navbar-item" href="https://www.instagram.com/danielsilvadz/" target="_blank">
+                        <span class="icon is-medium">
+                            <i class="fa-brands fa-instagram-square fa-2xl"></i>
                         </span>
                     </a>
                 </div>
